# serializer version: 1
# name: test_agg_ok[pipe_agg_group_by_cube]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      cube_list
                        cube_list
                          ident	col3
                        bigquery__literal
                          bigquery__struct_literal
                            ident	col4
                            ident	col5
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_empty]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      grouping_item_empty
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_grouping_sets]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      grouping_set_list
                        grouping_set_list
                          grouping_set_list
                            grouping_set
                              ident	col3
                          grouping_set
                            bigquery__literal
                              bigquery__struct_literal
                                ident	col4
                                ident	col5
                        grouping_set
                          ident	col6
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_multi_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      ident	col3
                      ident	col4
                    grouping_item
                      ident	col5
                      ident	col6
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_rollup]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      rollup_list
                        rollup_list
                          ident	col3
                        ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      ident	col3
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_single_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      ident	col3
                      ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_multi_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col3
                    as_alias
                      ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
  
  '''
# ---
# name: test_agg_ok[pipe_agg_single_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    bigquery__function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_as_ok[pipe_as_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_as
                ident	table2
  
  '''
# ---
# name: test_limit_ok[pipe_limit_integer_literal]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_limit
                integer_literal	1
  
  '''
# ---
# name: test_limit_ok[pipe_limit_param]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_limit
                parameter	limit
  
  '''
# ---
# name: test_order_by_ok[order_by_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_order_by
                order_by_items
                  order_by_item
                    ident	col1
                  order_by_item
                    ident	col2
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_kitchen_sink]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_order_by
                order_by_items
                  order_by_item
                    ident	col1
                    order_by_item_sort	ASC
                    order_by_item_nulls	FIRST
                  order_by_item
                    ident	col2
                    order_by_item_sort	DESC
                    order_by_item_nulls	LAST
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_nulls]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_order_by
                order_by_items
                  order_by_item
                    ident	col1
                    order_by_item_nulls	FIRST
                  order_by_item
                    ident	col2
                    order_by_item_nulls	LAST
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_sort]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_order_by
                order_by_items
                  order_by_item
                    ident	col1
                    order_by_item_sort	ASC
                  order_by_item
                    ident	col2
                    order_by_item_sort	DESC
  
  '''
# ---
# name: test_order_by_ok[order_by_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_order_by
                order_by_items
                  order_by_item
                    ident	col1
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_drop
                drop_list
                  drop_item
                    ident	col1
                  drop_item
                    ident	col2
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_drop
                drop_list
                  drop_item
                    ident	col1
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_drop
                drop_list
                  drop_item
                    ident	col1
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    bigquery__function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
                    as_alias
                      ident	col2
                  extend_item
                    bigquery__function_call_expr
                      ident	EXP
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    bigquery__function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    bigquery__function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    bigquery__function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pipe_ok[pipe_from]
  '''
  start
    query_statement
      query_expr
        pipe_from
          from_clause
            bigquery__from_item_table
              bigquery__path_expression
                ident	table1
  
  '''
# ---
# name: test_pipe_ok[pipe_from_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            select
              select_list
                bigquery__select_item
                  bigquery__select_expr
                    ident	col1
              bigquery__select_from
                from_clause
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_subquery_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            subquery
              query_expr
                select
                  select_list
                    bigquery__select_item
                      bigquery__select_expr
                        ident	col1
                  bigquery__select_from
                    from_clause
                      bigquery__from_item_table
                        bigquery__path_expression
                          ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      ident	col1
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_rename
                rename_list
                  rename_item
                    ident	col1
                    as_alias
                      ident	col2
                  rename_item
                    ident	col3
                    as_alias
                      ident	col4
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_rename
                rename_list
                  rename_item
                    ident	col1
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_rename
                rename_list
                  rename_item
                    ident	col1
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set
                set_list
                  set_item
                    ident	col1
                    bigquery__function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
                  set_item
                    ident	col2
                    bigquery__function_call_expr
                      ident	EXP
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set
                set_list
                  set_item
                    ident	col1
                    bigquery__function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set
                set_list
                  set_item
                    ident	col1
                    bigquery__function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_union_ok[union_all_by_name]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_union
                union_mode	ALL
                union_by_name
                union_list
                  subquery
                    query_expr
                      select
                        select_list
                          bigquery__select_item
                            bigquery__select_expr
                              bigquery__literal
                                integer_literal	1
  
  '''
# ---
# name: test_union_ok[union_all_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_union
                union_mode	ALL
                union_list
                  subquery
                    query_expr
                      select
                        select_list
                          bigquery__select_item
                            bigquery__select_expr
                              bigquery__literal
                                integer_literal	1
  
  '''
# ---
# name: test_union_ok[union_distinct_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_union
                union_mode	DISTINCT
                union_list
                  subquery
                    query_expr
                      select
                        select_list
                          bigquery__select_item
                            bigquery__select_expr
                              bigquery__literal
                                integer_literal	1
                  subquery
                    query_expr
                      select
                        select_list
                          bigquery__select_item
                            bigquery__select_expr
                              bigquery__literal
                                integer_literal	2
  
  '''
# ---
# name: test_where_ok[pipe_where_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_where
                ident	col1
  
  '''
# ---
